# cloze-or-close

./: .flake8  .gitignore  .pre-commit-config.yaml  EXPERIMENTS.md  LICENSE.txt  README.md  pyproject.toml
analysis/abstract_experiments/: AbstractAnalysis.ipynb  AbstractDatasetConstruction.ipynb
analysis/adword_experiments/: AdWordProfiling.ipynb  AspellSpellcheckPerformance.ipynb  Byt5RecoveryAnalysis.ipynb  HumanAnnotationPerformance.ipynb  LLMRecoveryAnalysis.ipynb  LegitSubsetSelection.ipynb
analysis/attacks/: LegitDistributions.ipynb
analysis/hot_experiments/: HotBaserate.ipynb  HotClassificationAnalysis.ipynb  HotDatasetConstruction.ipynb
analysis/outputs/: bootstrap_ratios.csv  hot-bootstrap-metrics.csv  hot-llm-bootstrap-metrics.csv  hot-llm-total-metrics.csv  hot-total-metrics.csv
attack_licenses/: ANTHRO_LICENSE.txt  VIPER_LICENSE.txt
clz_or_cls/: __init__.py  abstracts.py  analysis.py  anthro_lib.py  api_llms.py  byt5.py  datasets.py  g2pp2g.py  hot.py  llms.py  perturbation.py  phonee.py  recovery.py  similarity.py  zeroe.py
clz_or_cls/processes/: __init__.py  abstract_candidates.py  abstract_recovery_sentence.py  abstract_recovery_word.py  adword_recovery_for_finetuned.py  adword_recovery_for_prompted.py  build_adword.py  build_phonetic_map.py  cli_utils.py  find_legit_extensions_from_wikitext.py  hot_candidates.py  hot_classification.py  hot_datasets.py  modelify_checkpoints.py  train_recovery.py
env/: conda-main.yaml  conda-zeroephonetic.yaml  requirements-frozen.txt  requirements-zeroephonetic.txt  requirements.txt
(+374 files in other folders)
